feature: update segment
