# alexa-rpg-backoffice/build-tsoa/swagger.json
@@ -130,6 +130,21 @@
 			"TCreateSegmentInput": {
 				"$ref": "#/components/schemas/Omit_TSegmentModel.id-or-createdAt-or-updatedAt-or-deletedAt_"
 			},
+			"Pick_TSegmentModel.narrative_": {
+				"properties": {
+					"narrative": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"narrative"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"TUpdateSegmentInput": {
+				"$ref": "#/components/schemas/Pick_TSegmentModel.narrative_"
+			},
 			"TStoryModel": {
 				"properties": {
 					"deletedAt": {
@@ -336,6 +351,45 @@
 						}
 					}
 				]
+			},
+			"put": {
+				"operationId": "Update",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/TSegmentModel"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Segment"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "idSegment",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/TUpdateSegmentInput"
+							}
+						}
+					}
+				}
 			},
 			"delete": {
 				"operationId": "Delete",
